fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -1081,7 +1081,14 @@ a {
 }
 
 .education-university-title {
+	font-size: var(--fs-l);
 	margin-bottom: 1.5em;
+}
+
+@media (min-width: 400px) {
+	.education-university-title {
+		font-size: var(--fs-xl);
+	}
 }
 
 .education-university-name {
